# corvus

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md
.github/workflows/: ci.yml
cmake/: FindOrFetchHighway.cmake  corvus-config.cmake.in  corvus.pc.in
consumer_example/: CMakeLists.txt  README.md  main.cpp
docs/: ACCURACY.md
include/corvus/: corvus.h
src/: erf.cpp  erf_core-inl.h  erf_data.cpp  erf_data.h  erf_data.inc  erfc.cpp  erfc_tail_data.h  ops-inl.h
tests/: CMakeLists.txt  bench_erf.cpp  bench_erfc.cpp  test_erf.cpp  test_erf_ulp.cpp  test_erfc.cpp  test_erfc_ulp.cpp
tests/data/: erf_reference.txt  erfc_reference.txt
tools/: gen_erf_reference.py  gen_erf_table.py  gen_erfc_reference.py  gen_erfc_tail_poly.py
